--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -144,6 +144,11 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
             background-color: rgba(19, 88, 199, 0.335);
         }
     }
+    &.brown {
+        &::before{
+            background-color: rgba(50, 37, 11, 0.9);
+        }
+    }
 }
 
 @for $i from 10 through 20 {
