--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -650,15 +650,16 @@ $gradient6 :  linear-gradient(to bottom, #92fe9d 0%, #00c9ff 100%);
             padding-bottom: 56%;
             background: #000;
             position: relative;
+            overflow: hidden;
             .img {
                 position: absolute;
-                left: 0; top: 0;
-                width: 100%;
-                height: 100%;
+                left: -10%; top: -10%;
+                width: 120%;
+                height: 120%;
                 background-size: cover;
                 background-repeat: no-repeat;
                 filter : saturate(0%);
-                transition : all 1s;
+                transition : filter 1s;
 
                 &:hover {
                     filter :saturate(100%);
