--- a/layout/test05.html
+++ b/layout/test05.html
@@ -8,7 +8,7 @@
 
     <style>
         * {
-            padding: 0; margin: 0;
+            padding: 0; 
             margin: 0 auto;
         }
 
@@ -29,6 +29,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 100px;
         }
         #header .menu {
             width: 80%;
@@ -38,6 +39,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 100px;
         }
         .banner {
             width: 100%;
@@ -46,6 +48,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 400px;
         }
         .content {
             width: 100%;
@@ -58,6 +61,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 250px;
         }
         .content .content2{
             width: 400px;
@@ -67,6 +71,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 250px;
         }
         .content .content3{
             width: 400px;
@@ -76,6 +81,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 250px;
         }
 
         .footer {
@@ -91,6 +97,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 100px;
         }
         .footer2 {
             width: 800px;
@@ -100,6 +107,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 100px;
         }
         .footer3 {
             width: 200px;
@@ -109,6 +117,7 @@
             color : #fff;
             text-align: center;
             font-size: 20px;
+            line-height: 100px;
         }
     </style>
 </head>
@@ -122,18 +131,18 @@
             <!-- //header -->
             <div class="banner">이미지 슬라이드</div>
             <!-- //banner -->
-                <div class="content">
-                    <div class="content1">공지사항</div>
-                    <div class="content2">갤러리</div>
-                    <div class="content3">팝업</div>
-                </div>
-                <!-- //contents -->
-                <div class="footer">
-                    <div class="footer1">로고</div>
-                    <div class="footer2">Copyright</div>
-                    <div class="footer3">SNS</div>
-                </div>
-                <!-- //footer -->
+            <div class="content">
+                <div class="content1">공지사항</div>
+                <div class="content2">갤러리</div>
+                <div class="content3">팝업</div>
+            </div>
+            <!-- //contents -->
+            <div class="footer">
+                <div class="footer1">로고</div>
+                <div class="footer2">Copyright</div>
+                <div class="footer3">SNS</div>
+            </div>
+            <!-- //footer -->
         </div>
     </div>
 </body>
